high level overview of schematic trace solver

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@biomejs/biome": "^2.2.2",
     "@tscircuit/math-utils": "^0.0.19",
     "@types/bun": "latest",
+    "calculate-elbow": "^0.0.9",
     "graphics-debug": "^0.0.62",
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
