--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "Preserve",
     "moduleDetection": "force",
@@ -9,8 +9,12 @@
     "allowJs": true,
 
     "paths": {
-      "lib/*": ["lib/*"]
+      "lib/*": ["lib/*"],
+      "site/*": ["site/*"],
+      "tests/*": ["tests/*"]
     },
+
+    "baseUrl": ".",
 
     // Bundler mode
     "moduleResolution": "bundler",
