msp solver visualization work, vite now can load absolute paths

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@react-hook/resize-observer": "^2.0.2"
   }
 }
