--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bun": "latest",
     "calculate-elbow": "^0.0.9",
     "connectivity-map": "^1.0.0",
+    "flatbush": "^4.5.0",
     "graphics-debug": "^0.0.62",
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
