--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
+    "@react-hook/resize-observer": "^2.0.2",
     "@tscircuit/math-utils": "^0.0.19",
     "@types/bun": "latest",
     "calculate-elbow": "^0.0.10",
@@ -19,8 +20,7 @@
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
     "tsup": "^8.5.0",
-    "vite": "^7.1.3",
-    "@react-hook/resize-observer": "^2.0.2"
+    "vite": "^7.1.3"
   },
   "peerDependencies": {
     "typescript": "^5"
