--- a/cosmos.config.json
+++ b/cosmos.config.json
@@ -2,5 +2,6 @@
   "$schema": "http://json.schemastore.org/cosmos-config",
   "plugins": ["react-cosmos-plugin-vite"],
   "fixtureFileSuffix": "page",
-  "decoratorFile": "cosmos.decorator.tsx"
+  "decoratorFile": "cosmos.decorator.tsx",
+  "port": 5020
 }
