fix calculate elbow issue with near-axis aligned traces

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "peerDependencies": {
     "typescript": "^5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  }
 }
