--- a/.github/workflows/bun-pver-release.yml
+++ b/.github/workflows/bun-pver-release.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'lib/**'
+  workflow_dispatch:
 jobs:
   publish:
     runs-on: ubuntu-latest
