--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@biomejs/biome": "^2.2.2",
     "@react-hook/resize-observer": "^2.0.2",
     "@tscircuit/math-utils": "^0.0.19",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.21",
     "bun-match-svg": "^0.0.13",
     "calculate-elbow": "^0.0.11",
     "connectivity-map": "^1.0.0",
