--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
     "connectivity-map": "^1.0.0",
     "flatbush": "^4.5.0",
     "graphics-debug": "^0.0.62",
+    "react": "^19.1.1",
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
+    "react-dom": "^19.1.1",
     "tsup": "^8.5.0",
     "vite": "^7.1.3"
   },
   "peerDependencies": {
     "typescript": "^5"
-  },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
   }
 }
