minor build system fixes to prevent bundling

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "cosmos",
-    "build": "tsup lib/index.ts --format esm --dts",
+    "build": "tsup-node lib/index.ts --format esm --dts",
     "format": "biome format --write .",
     "format:check": "biome format ."
   },
