--- a/package.json
+++ b/package.json
@@ -5,26 +5,33 @@
   "type": "module",
   "scripts": {
     "start": "cosmos",
-    "build": "tsup-node lib/index.ts --format esm --dts",
+    "build": "tsc && vite build",
     "format": "biome format --write .",
-    "format:check": "biome format ."
+    "format:check": "biome format .",
+    "test": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
     "@react-hook/resize-observer": "^2.0.2",
     "@tscircuit/math-utils": "^0.0.19",
     "@types/bun": "^1.2.21",
-    "bun-match-svg": "^0.0.13",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "bun-match-svg": "^0.0.9",
     "calculate-elbow": "^0.0.12",
     "connectivity-map": "^1.0.0",
     "flatbush": "^4.5.0",
     "graphics-debug": "^0.0.62",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-cosmos": "^7.0.0",
     "react-cosmos-plugin-vite": "^7.0.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.2.0",
     "tsup": "^8.5.0",
-    "vite": "^7.1.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.12",
+    "vitest": "^4.0.2"
   },
   "peerDependencies": {
     "typescript": "^5"
