--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
+    "useDefineForClassFields": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
 
     "paths": {
       "lib/*": ["lib/*"],
